--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container"><a class="navbar-brand" href="#page-top">Web Gis</a><button data-bs-toggle="collapse" data-bs-target="#navbarResponsive" class="navbar-toggler text-white bg-primary navbar-toggler-right text-uppercase rounded" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item dropdown show"><a class="dropdown-toggle nav-link" aria-expanded="true" data-bs-toggle="dropdown" href="#" style="font-family: Montserrat, sans-serif;font-size: 19px;">Dropdown&nbsp;</a>
+                    <li class="nav-item dropdown show"><a class="dropdown-toggle nav-link" aria-expanded="true" data-bs-toggle="dropdown" href="#" style="font-family: Montserrat, sans-serif;font-size: 19px;">Division&nbsp;</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" id="khulnaLocal" href="#">Khulna</a></li>
                             <li><a class="dropdown-item" id="barisalLocal" href="#">Barisal</a></li>
